welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: recursive variable T needs type
	var T = new Array[Int] (T.length)
                                ^indexOfValue:4: error: not found: value lookingFor
	if (value == lookingFor) return value
                     ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for (i <-0 to T.length-1) {
               ^